# airflow-docker-setup

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
dags/: dagDockerXcom.py  testeDagDocker.py
